[gd_scene load_steps=4 format=3 uid="uid://gb3gy73jngq6"]

[ext_resource type="Texture2D" uid="uid://cw164j5sq8t7c" path="res://addons/object_creator/Assets/Cross.png" id="1_ip54l"]
[ext_resource type="Texture2D" uid="uid://bfxbi2wgbkutp" path="res://addons/object_creator/Assets/checkmark.png" id="2_m3di5"]
[ext_resource type="Script" path="res://addons/object_creator/Scripts/InputScripts/object_input.gd" id="2_r24lb"]

[node name="ResourceInput" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("2_r24lb")

[node name="ClassSection" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="PropertyName" type="Label" parent="ClassSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.9
text = "PropertyName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropterySelect" type="OptionButton" parent="ClassSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9

[node name="ChooseClassButton" type="TextureButton" parent="ClassSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
texture_normal = ExtResource("2_m3di5")
ignore_texture_size = true
stretch_mode = 5

[node name="EditSection" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="IndentSpace" type="MarginContainer" parent="EditSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="ClassName" type="Label" parent="EditSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.2
text = "ClassName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditButton" type="Button" parent="EditSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
text = "Edit"

[node name="ClearButton" type="TextureButton" parent="EditSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("1_ip54l")
ignore_texture_size = true
stretch_mode = 5
